--- a/primeiroprojetospringbatch/src/main/resources/application.properties
+++ b/primeiroprojetospringbatch/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.output.ansi.enabled=always
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_batch?useUnicode=true?characterEncoding=UTF-8?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=user
+spring.datasource.password=123456
+spring.batch.jdbc.initialize-schema=always
