--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_batch?useUnicode=true?characterEncoding=UTF-8?useTimezone=true&serverTimezone=UTC
+spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/spring_batch?useUnicode=true?characterEncoding=UTF-8?useTimezone=true&serverTimezone=UTC
 spring.output.ansi.enabled=always
 spring.datasource.username=user
 spring.datasource.password=123456
 spring.batch.jdbc.initialize-schema=always
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.platform=mysql
+
+app.datasource.jdbcUrl=jdbc:mysql://localhost:3306/app?useUnicode=true?characterEncoding=UTF-8?useTimezone=true&serverTimezone=UTC
+app.datasource.username=user
+app.datasource.password=123456
